# Nexora_contract

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  deploy.sh  soroban.toml  wallet_connect.html
.github/workflows/: ci.yml
campaign/: Cargo.toml
campaign/src/: lib.rs  types.rs
common/: Cargo.toml
common/src/: lib.rs
crates/contracts/core/: Cargo.toml
crates/contracts/core/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: asset_issuing.rs  lib.rs  main.rs  secure_vault.rs  withdrawal_audit.rs
crates/tools/tests/: integration_test.rs
docs/: deployment.md
scripts/: deploy.sh
token-bridge/: Cargo.toml
