[package]
name = "nexora-common"
version = "0.1.0"
edition = "2021"
description = "Nexora common types — shared CampaignStatus, MilestoneStatus, and AssetInfo"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
