[package]
name = "nexora-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Legacy Nexora campaign reference contract; canonical implementation lives in nexora-campaign"

[lib]
crate-type = ["cdylib", "lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
